+cookies, login, etc

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,8 @@
     
     <title>Document</title>
 </head>
-<body style="background-image: url('{{gif}}');">
+
+<body style="background-image: url('{gif}');">
     
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg ">
@@ -47,6 +48,8 @@
           </div>
         </div>
       </nav>
+
+      <href="login.html"
     
 </body>
 </html>
