--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,6 +47,14 @@
           </div>
         </div>
       </nav>
+
+      <!-- Pomodoro Timer -->
+
+      <div class="navbar navbar-expand mx-2 row justify-content-end">
+        <div class="bg-light rounded-3 border" style="height: 100px; width: 200px;">
+          Hello
+        </div>
+      </div>
     
 </body>
 </html>
