--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,13 +43,16 @@
                     <img src="../static/assets/reshot-icon-leaderboard-2ZS8JETV4N.svg" width="25px" height="25px" alt="">
                 </a>
               </li>
+
+              <li class="nav-item">
+                <a href="/logout">Log Out</a>
+              </li>
               
             </ul>
           </div>
         </div>
       </nav>
-
-      <href="login.html"
     
 </body>
+
 </html>
