--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,9 +51,21 @@
 
   <!-- Pomodoro Timer -->
 
-  <div class="navbar navbar-expand mx-2 row justify-content-end">
-    <div class="bg-light rounded-3 border" style="height: 100px; width: 200px;">
-      Hello
+  <div class="mt-3 mx-2 row justify-content-end">
+    <div class=" bg-light rounded-3 border" style="opacity:80%; height: 200px; width: 300px;">
+      <div class="row d-flex align-items-center justify-content-center mt-5 display-1 fw-semibold">
+        25:00
+      </div>
+      
+      <div class="d-flex justify-content-center gap-2">
+        <button class="btn btn-dark btn-lg">
+          Start
+        </button>
+        <button class="btn btn-dark btn-lg">
+          Back
+        </button>
+      </div>
+
     </div>
   </div>
 
