--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,8 +52,28 @@
   <!-- Pomodoro Timer -->
 
   <div class="mt-3 mx-2 row justify-content-end">
-    <div class=" bg-light rounded-3 border" style="opacity:80%; height: 200px; width: 300px;">
-      <div class="row d-flex align-items-center justify-content-center mt-5 display-1 fw-semibold">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:80%; height: 200px; width: 300px;">
+      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
+        25:00
+      </div>
+      
+      <div class="d-flex justify-content-center gap-2">
+        <button class="btn btn-dark btn-lg">
+          Start
+        </button>
+        <button class="btn btn-dark btn-lg">
+          Back
+        </button>
+      </div>
+
+    </div>
+  </div>
+  
+  <!-- To-Do List -->
+  
+  <div class="mt-3 mx-2 row justify-content-end">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:80%; height: 200px; width: 300px;">
+      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
         25:00
       </div>
       
