--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -52,7 +52,7 @@
   <!-- Pomodoro Timer -->
 
   <div class="mt-3 mx-2 row justify-content-end">
-    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:80%; height: 200px; width: 300px;">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 200px; width: 300px;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
         25:00
       </div>
@@ -72,19 +72,49 @@
   <!-- To-Do List -->
   
   <div class="mt-3 mx-2 row justify-content-end">
-    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:80%; height: 200px; width: 300px;">
-      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        25:00
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 300px; width: 300px; overflow:scroll;">
+      <div class="d-flex align-items-center justify-content-center fw-semibold">
+        Reminders
       </div>
       
-      <div class="d-flex justify-content-center gap-2">
-        <button class="btn btn-dark btn-lg">
-          Start
-        </button>
-        <button class="btn btn-dark btn-lg">
-          Back
-        </button>
+      <div class="d-flex flex-column px-2 justify-content-start">
+        <div class="d-flex gap-2">
+          
+          <button class="d-flex btn gap-2 align-items-center">
+            <svg style="width: 16px; height: 16px;"  xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            </svg>
+            
+            List Tasks Here
+          </button>
+
+        </div>
+        
+        <div class="d-flex gap-2">
+          
+          <button class="d-flex btn gap-2 align-items-center">
+            <svg style="width: 16px; height: 16px;" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            </svg>
+            
+            Finish Math Homework by 7pm and Studydfsd dskjh skshd fdjk
+          </button>
+
+        </div>
+        
+        <div class="d-flex gap-2">
+          
+          <button class="d-flex btn gap-2 align-items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+            </svg>
+            
+            List Tasks Here
+          </button>
+
+        </div>
       </div>
+      
 
     </div>
   </div>
