--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,22 +1,49 @@
-<HTMl>
+<!DOCTYPE html>
 
-    <body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        
+        <title>Log In</title>
+    </head>
 
-        Hello, this is the login page.
+    <body class="bg-dark">
 
-        <form action="/login" method = "POST">
-            <p>Username:</p>
-            <input type="text" name="username">
-            <p>Password:</p>
-            <input type="text" name="password">
-            <p></p>
-            <input type="Submit" name="sub1">
-            <p>{{result}}</p>
-        </form>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a class="navbar-brand btn btn-light btn-sm text-primary" style="opacity: 0.8;" href="/">coffeebuds</a>
+            </div>
+        </nav>
+        
+        <div class="row justify-content-center">
+            <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:60%; width: 20%;">
+                Enter your login information below.
 
-        <br>
+                <form action="/login" method = "POST">
+                    <p>Username:</p>
+                    <input type="text" name="username">
+                    <p></p>
+                    <p>Password:</p>
+                    <input type="password" name="password">
+                    <p></p>
+                    <input type="Submit" name="sub1">
+                    <p>{{result}}</p>
+                    
+                </form>
 
-        <form action = "/signup" method = "GET"> <input type = "submit" value = "Register Here"></form>
+                <form action="/signup" method = "GET"> 
+                    <input type="submit" value = "Register Here">
+                </form>
+            </div>
+          </div>
+       
     </body>
 
-</HTMl>
+</html>
