--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -119,12 +119,14 @@
     </div>
   </div>
 
-  <div class="container-fluid">
-    <audio controls>
-      <source src={{audio}} type="audio/mpeg">
-    </audio>
-
-  </div>
+  <!-- Radio -->
+  <nav class="navbar fixed-bottom">
+    <div class="container-fluid">
+      <audio controls class="bg-light rounded-3" style="opacity:85%">
+        <source src={{audio}} type="audio/mpeg">
+      </audio>
+    </div>
+  </nav>
   
 </body>
 
