--- a/app/templates/destress.html
+++ b/app/templates/destress.html
@@ -70,19 +70,45 @@
   </nav>
   
   <div class="d-flex justify-content-evenly py-5 align-items-center" style="height: inherit;">
-    <div class=" btn btn-light d-flex align-items-center justify-content-center" style="width: 20rem; height: 20rem;">
+    
+    <div class="card btn btn-light p-2" style="width: 18rem;">
+        <img src="../static/assets/reshot-icon-joker-TH2CFUAYG9.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="fw-semibold card-title d-flex justify-content-center align-items-center display-5">Dad Jokes</p>
+        </div>
+    </div>
+    
+    <div class="card btn btn-light p-2" style="width: 18rem;">
+        <img src="../static/assets/reshot-icon-trivia-game-CV27NJ3QXF.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="fw-semibold card-title d-flex justify-content-center align-items-center display-5">Trivia</p>
+        </div>
+    </div>
+      
+    <div class="card btn btn-light p-2" style="width: 18rem;">
+        <img src="../static/assets/reshot-icon-cat-JPHZ6RVQY4.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="fw-semibold card-title d-flex justify-content-center align-items-center display-5">Cat Pics</p>
+        </div>
+    </div>
+    
+    <!-- <div class=" btn btn-light d-flex align-items-center justify-content-center" style="width: 20rem; height: 20rem;">
       <div class="fw-semibold display-4">
         Dad Jokes
       </div>
     </div>
     
-    <div class="fw-semibold display-4 bg-light bg-gradient card d-flex align-items-center justify-content-center" style="background-color: #EEE; width: 20rem; height: 20rem;">
-        Dad Jokes
+    <div class=" btn btn-light d-flex align-items-center justify-content-center" style="width: 20rem; height: 20rem;">
+        <div class="fw-semibold display-4">
+          Trivia
+        </div>
     </div>
       
-    <div class="fw-semibold display-4 bg-light bg-gradient card d-flex align-items-center justify-content-center" style="background-color: #EEE; width: 20rem; height: 20rem;">
-        Dad Jokes
-    </div>
+    <div class=" btn btn-light d-flex align-items-center justify-content-center" style="width: 20rem; height: 20rem;">
+        <div class="fw-semibold display-4">
+          Cat Pics
+        </div>
+    </div> -->
   </div>
 
   
