--- a/app/templates/destress.html
+++ b/app/templates/destress.html
@@ -32,7 +32,7 @@
     }
   </style>
 
-<body class="bg-dark" style=" height: 75vh;">
+<body class="" style="background-color: #27272a; height: 75vh;">
   
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg ">
