--- a/app/templates/trivia.html
+++ b/app/templates/trivia.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>Trivia Quiz</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    
+    
     <style>
       .question {
         background-color: #EEE;
@@ -23,24 +27,81 @@
       }
     </style>
   </head>
-  <body>
-    <div class="container">
-      <h1 class="mt-5">Trivia Quiz</h1>
-
-      <div class="question">
-        <h2>What is the capital of France?</h2>
-      </div>
-
-      <div class="answer" data-value="1">
-        <h3>Paris</h3>
-      </div>
-
-      <div class="answer" data-value="2">
-        <h3>Berlin</h3>
-      </div>
-
-      <div class="answer" data-value="3">
-        <h3>Rome</h3>
-      </div>
+  <body style="background-color: #27272a;">
+    
+    <!-- Navbar -->
+    
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+          <a class="navbar-brand btn btn-light btn-sm text-primary" style="opacity: 0.8;" href="/">coffeebuds</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end " id="navbarNav">
+            <ul class="navbar-nav gap-2">
+              <li class="nav-item">
+                <a class="nav-link btn btn-light btn-sm justify-content-center align-items-center" style="opacity: 0.8;" aria-current="page" href="#">
+                    <img src="../static/assets/reshot-icon-minimal-timer-RLEU6FQHW5.svg" width="25px" height="25px" alt="">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="#">
+                    <img src="../static/assets/reshot-icon-list-S4CW5TRAZY.svg" width="25px" height="25px" alt="">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="#">
+                    <img src="../static/assets/reshot-icon-ice-2UJDX685BG.svg" width="25px" height="25px" alt="">
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="/loginRdrct">
+                    <img src="../static/assets/reshot-icon-leaderboard-2ZS8JETV4N.svg" width="25px" height="25px" alt="">
+                </a>
+              </li>
+              
+            </ul>
+          </div>
+        </div>
+      </nav>
+    
+    <div class="d-flex align-items-center justify-content-center">
+        <div class="container ">
+            
+            <div style="height: 2rem;">
+            </div>
+            
+            <div class="btn btn-light ">
+                <!-- <img src="../static/assets/backspace-fill.svg" style="height: 2rem; width: 2rem;" alt=""> -->
+                <div class="fw-semibold">
+                    Go Back 
+                </div>
+            </div>
+            
+            <div style="height: 2rem;">
+            </div>
+      
+            <div class="question border rounded-3">
+              <h2 class="display-5">What is the capital of France?</h2>
+            </div>
+      
+            <div class="d-flex flex-column gap-2 py-2">
+              <div class="answer rounded-3" data-value="1">
+                  <h3>Paris</h3>
+                </div>
+          
+                <div class="answer rounded-3" data-value="2">
+                  <h3>Berlin</h3>
+                </div>
+          
+                <div class="answer rounded-3" data-value="3">
+                  <h3>Rome</h3>
+                </div>
+                
+                <div class="answer rounded-3" data-value="3">
+                  <h3>Rome</h3>
+                </div>
+            </div>
+          </div>
     </div>
     
