--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -5,11 +5,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        
+
         <title>Sign Up</title>
     </head>
 
@@ -26,7 +26,7 @@
             <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:60%; width: 20%;">
                 Sign up below.
 
-                <form action="/register" method = "POST">
+                <form action="/signup" method = "POST">
                     <p>Username:</p>
                     <input type="text" name="username">
                     <p></p>
@@ -36,11 +36,11 @@
                     <input type="submit" name="sub1">
                 <p> {{result}}</p>
                 </form>
-        
+
                 <form action = "/login" method = "GET"> <input type = "submit" value = "Back to Login"></form>
-            </div>  
+            </div>
         </div>
-        
+
     </body>
 
 </html>
