--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    
+     <script src="tasks.js"></script>
     <title>Home</title>
 </head>
 
 <body style="background-image: url('{{gif}}'); height: 100vh;">
-  
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
@@ -43,7 +43,7 @@
                 <img src="../static/assets/reshot-icon-leaderboard-2ZS8JETV4N.svg" width="25px" height="25px" alt="">
             </a>
           </li>
-          
+
         </ul>
       </div>
     </div>
@@ -56,7 +56,7 @@
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
         25:00
       </div>
-      
+
       <div class="d-flex justify-content-center gap-2">
         <button class="btn btn-dark btn-lg">
           Start
@@ -68,55 +68,66 @@
 
     </div>
   </div>
-  
+
   <!-- To-Do List -->
-  
+
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 300px; width: 300px; overflow:scroll;">
       <div class="d-flex align-items-center justify-content-center fw-semibold">
         Reminders
       </div>
-      
+
       <div class="d-flex flex-column px-2 justify-content-start">
         <div class="d-flex gap-2">
-          
           <button class="d-flex btn gap-2 align-items-center">
             <svg style="width: 16px; height: 16px;"  xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
               <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             </svg>
-            
             List Tasks Here
           </button>
 
         </div>
-        
+
         <div class="d-flex gap-2">
-          
           <button class="d-flex btn gap-2 align-items-center">
             <svg style="width: 16px; height: 16px;" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
               <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             </svg>
-            
             Finish Math Homework by 7pm and Studydfsd dskjh skshd fdjk
           </button>
-
         </div>
-        
+
         <div class="d-flex gap-2">
-          
           <button class="d-flex btn gap-2 align-items-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
               <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             </svg>
-            
             List Tasks Here
           </button>
-
         </div>
       </div>
-      
-
     </div>
+
+
+    <script>
+    var myNodelist = document.getElementsByTagName("div");
+    var i;
+    for (i = 0; i < myNodelist.length; i++) {
+      var span = document.createElement("SPAN");
+      var txt = document.createTextNode("\u00D7");
+      span.className = "close";
+      span.appendChild(txt);
+      myNodelist[i].appendChild(span);
+    }
+
+    // Add a "checked" symbol when clicking on a list item
+    var list = document.querySelector('button');
+    list.addEventListener('click', function(ev) {
+      if (ev.target.tagName === 'div') {
+        ev.target.classList.toggle('checked');
+      }
+    }, false);
+    </script>
   </div>
 
   <!-- Radio -->
@@ -127,7 +138,7 @@
       </audio>
     </div>
   </nav>
-  
+
 </body>
 
 </html>
