--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
     <title>Home</title>
 </head>
 
-<body style="background-image: url('{{gif}}'); height: 100vh;">
+<body style="background-size: 100% 100%; height: 100%; width: 100%; background-image: url('{{gif}}'); height: 100vh;">
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg ">
