--- a/app/templates/dadjokes.html
+++ b/app/templates/dadjokes.html
@@ -81,26 +81,14 @@
             <div style="height: 2rem;">
             </div>
 
-            <div class="question border rounded-3">
-              <h2 class="display-5">What is the capital of France?</h2>
-            </div>
-
-            <div class="d-flex flex-column gap-2 py-2">
-              <div class="answer rounded-3" data-value="1">
-                  <h3>Paris</h3>
-                </div>
-
-                <div class="answer rounded-3" data-value="2">
-                  <h3>Berlin</h3>
-                </div>
-
-                <div class="answer rounded-3" data-value="3">
-                  <h3>Rome</h3>
-                </div>
-
-                <div class="answer rounded-3" data-value="3">
-                  <h3>Rome</h3>
-                </div>
+            <div class="card">
+              <div class="card-header">
+                Dad Jokes
+              </div>
+              <div class="card-body">
+                <p class="card-text display-6">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Next Joke</a>
+              </div>
             </div>
           </div>
     </div>
