--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -49,20 +49,62 @@
     </div>
   </nav>
 
+
   <!-- Pomodoro Timer -->
 
+  <!-- Javascript for timer -->
+  <script>
+    
+    var time = 1500;
+    let interval;
+
+    function timer() {
+      if(time > 0) {
+        time--;
+        document.getElementById('displayTime').innerHTML = formatTime(time);
+      } else {
+        clearInterval(interval);
+      }
+    }
+    function startTimer(){
+      interval = setInterval(timer, 1000);
+    }
+    function pauseTimer(){
+      interval = clearInterval(interval);
+    }
+    function resetTimer(){
+      interval = clearInterval(interval);
+      time = 1500;
+      document.getElementById('displayTime').innerHTML = formatTime(time);
+    }
+    function formatTime(num){
+      const min = Math.floor(num/60);
+      const sec = num%60;
+      if (sec<10) {
+        return min + ":0" + sec; 
+      } else {
+        return min + ":" + sec;
+      }
+    }
+
+  </script>
+
+  <!-- Display timer -->
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 200px; width: 300px;">
-      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        25:00
+      <div class="d-flex align-items-center justify-content-center display-1 fw-semibold"> 
+        <div id=displayTime>25:00</div>
       </div>
 
       <div class="d-flex justify-content-center gap-2">
-        <button class="btn btn-dark btn-lg">
+        <button type="button" class="btn btn-dark btn-lg" onclick="startTimer();">
           Start
         </button>
-        <button class="btn btn-dark btn-lg">
-          Back
+        <button class="btn btn-dark btn-lg" onclick="pauseTimer();">
+          Pause
+        </button>
+        <button class="btn btn-dark btn-lg" onclick="resetTimer();">
+          Reset
         </button>
       </div>
 
