--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -114,18 +114,43 @@
   <!-- To-Do List -->
 
   <div class="mt-3 mx-2 row justify-content-end">
-    <div id="container" class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: auto; width: 300px; margin-bottom: 10px;">
-      <h1>To-Do List <i class="fa fa-plus"></i></h1>
-      <input type="text" placeholder="Add New Todo">
-    
-      <!--We can add the preexisting tasks here -->
-      <ul> 
-        <li><span><i class="fa fa-trash"></i></span> Go To Maths Class</li>
-        <li><span><i class="fa fa-trash"></i></span> Buy New Clothes</li>
-        <li><span><i class="fa fa-trash"></i></span> Visit George</li>
-      </ul>
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 300px; width: 300px; overflow:scroll;">
+      <div class="fs-5 d-flex align-items-center justify-content-center fw-semibold">
+        Reminders
+      </div>
+
+      <div class="d-flex flex-column px-2 justify-content-start">
+             
+            <button class="d-flex btn align-items-center">
+              <svg style="width: 16px; height: 16px;" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+              </svg>
+              <div class="container">
+                Finish Math Homework by 7pm and Studydfsd dskjh skshd fdjk re i figured it out the problem hello what the hell is even going on he
+              </div>
+            </button>
+            
+            <button class="d-flex btn align-items-center">
+              <svg style="width: 16px; height: 16px;" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+              </svg>
+              <div class="container">
+                List Tasks Here
+              </div>
+            </button>
+            
+            <button class="d-flex btn align-items-center">
+              <svg style="width: 16px; height: 16px;" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-circle" viewBox="0 0 16 16">
+                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+              </svg>
+              <div class="container">
+                List Work Here To Do
+              </div>
+            </button>
+          
+            
+      </div>
     </div>
-  </div>
 
   <!-- <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 300px; width: 300px; overflow:scroll;">
@@ -168,7 +193,6 @@
     <style>
       	
       	body {
-	font-family: Roboto;
   background: -webkit-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); }
 
 
