--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,12 +15,14 @@
 <body style="background-size: 100% 100%; height: 100%; width: 100%; background-image: url('{{gif}}'); height: 100vh;">
 
 <!-- YouTube Video Background -->
-<!-- <div style="pointer-events: none; user-select: none; position: fixed; top: 100%; left: 100%;" class="yt-wrapper"> -->
+
+<!-- <div style="pointer-events: none; user-select: none; position: fixed; top: 100%; left: 100%;" class="yt-wrapper">
+<div style="width: 100%; height: 100%; overflow: hidden; display: flex; align-items: center; justify-content: center; border-radius: 8px;"> -->
+
   <div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; z-index: 0; background: black;" class="yt-wrapper">
-    <!-- <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px;"> -->
-      <!-- <div style="pointer-events: none; user-select: none; z-index: -1; border-radius: 8px; width: 100vw; height: 200vw;"> -->
+    <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
         <div style="width: 100%; height: 100%;">
-          <iframe allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=0&amp;mute=0&amp;controls=0&amp;origin=https%3A%2F%2Fwww.lofi.cafe&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;iv_load_policy=3&amp;modestbranding=true&amp;color=black&amp;enablejsapi=1&amp;widgetid=1" id="widget2" width="100%" height="100%" frameborder="0"></iframe>
+          <iframe allowfullscreen="1" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&iv_load_policy=3&modestbranding=true&color=black&enablejsapi=0&widgetid=1" id="widget2" width="100%" height="100%" frameborder="0">></iframe>
         </div>
       </div>
     </div>
