--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,6 +56,7 @@
   <script>
     
     var time = 1500;
+    var restTime = false;
     let interval;
 
     function timer() {
@@ -74,8 +75,16 @@
     }
     function resetTimer(){
       interval = clearInterval(interval);
-      time = 1500;
+      if(restTime) {
+        time = 300;
+      } else {
+        time = 1500;
+      }
       document.getElementById('displayTime').innerHTML = formatTime(time);
+    }
+    function switchTimer(){
+      restTime = !(restTime);
+      resetTimer();
     }
     function formatTime(num){
       const min = Math.floor(num/60);
@@ -91,7 +100,7 @@
 
   <!-- Display timer -->
   <div class="mt-3 mx-2 row justify-content-end">
-    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 200px; width: 300px;">
+    <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%; height: 270px; width: 300px;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold"> 
         <div id=displayTime>25:00</div>
       </div>
@@ -107,6 +116,12 @@
           Reset
         </button>
       </div>
+      <div class="d-flex justify-content-center gap-2">
+        <button class="btn btn-dark btn-lg" onclick="switchTimer();">
+          Switch to Work/Break
+        </button>
+      </div>
+
 
     </div>
   </div>
