--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,17 +19,28 @@
 <!-- <div style="pointer-events: none; user-select: none; position: fixed; top: 100%; left: 100%;" class="yt-wrapper">
 <div style="width: 100%; height: 100%; overflow: hidden; display: flex; align-items: center; justify-content: center; border-radius: 8px;"> -->
 
-  <div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; z-index: 0; background: black;" class="yt-wrapper">
+<div style="position: fixed; inset: 0px; display: flex; align-items: center; justify-content: center; z-index: 0; background: black;" class="yt-wrapper">
     <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; border-radius: 8px;">
         <div style="width: 100%; height: 100%;">
           <iframe allowfullscreen="1" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to" src="https://www.youtube.com/embed/qH3fETPsqXU?autoplay=1&mute=0&controls=0&origin=http://127.0.0.1:5000&playsinline=1&showinfo=0&rel=0&iv_load_policy=3&modestbranding=true&color=black&enablejsapi=0&widgetid=1" id="widget2" width="100%" height="100%" frameborder="0">></iframe>
         </div>
       </div>
-    </div>
 </div>
 
+<script>
+fetch('coffeebuds/links.txt')
+  .then(response => response.text())
+  .then(text => console.log(text))
 
-  <!-- Navbar -->
+function switchStations(){}
+</script>
+
+<!-- <button type="button" onclick="switchStations();">
+  Lo-fi Stations
+</button> -->
+
+
+  <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
       <a class="navbar-brand btn btn-light btn-sm text-primary" style="opacity: 0.8;" href="/">coffeebuds</a>
@@ -66,11 +77,10 @@
   </nav>
 
 
-  <!-- Pomodoro Timer -->
+<!-- POMODORO TIMER -->
 
-  <!-- Javascript for timer -->
-  <script>
-
+<!-- Javascript for timer -->
+<script>
     var time = 1500;
     let interval;
 
@@ -102,8 +112,7 @@
         return min + ":" + sec;
       }
     }
-
-  </script>
+</script>
 
   <!-- Display timer -->
   <div class="mt-3 mx-2 row justify-content-end">
