--- a/app/templates/destress.html
+++ b/app/templates/destress.html
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="#">
+            <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="/destress">
                 <img src="../static/assets/reshot-icon-ice-2UJDX685BG.svg" width="25px" height="25px" alt="">
             </a>
           </li>
