--- a/app/templates/trivia.html
+++ b/app/templates/trivia.html
@@ -71,12 +71,11 @@
             <div style="height: 2rem;">
             </div>
 
-            <div class="btn btn-light ">
-                <!-- <img src="../static/assets/backspace-fill.svg" style="height: 2rem; width: 2rem;" alt=""> -->
-                <div class="fw-semibold">
-                    Go Back
-                </div>
-            </div>
+            <a class="btn btn-light " href="/destress">
+              <div class="fw-semibold">
+                  Go Back
+              </div>
+            </a>
 
             <div style="height: 2rem;">
             </div>
