--- a/app/templates/dadjokes.html
+++ b/app/templates/dadjokes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Trivia Quiz</title>
+    <title>Dad Jokes</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -71,36 +71,23 @@
             <div style="height: 2rem;">
             </div>
 
-            <div class="btn btn-light ">
-                <!-- <img src="../static/assets/backspace-fill.svg" style="height: 2rem; width: 2rem;" alt=""> -->
-                <div class="fw-semibold">
-                    Go Back
-                </div>
-            </div>
+            <a class="btn btn-light " href="/destress">
+              <div class="fw-semibold">
+                  Go Back
+              </div>
+            </a>
 
             <div style="height: 2rem;">
             </div>
 
-            <div class="question border rounded-3">
-              <h2 class="display-5">What is the capital of France?</h2>
-            </div>
-
-            <div class="d-flex flex-column gap-2 py-2">
-              <div class="answer rounded-3" data-value="1">
-                  <h3>Paris</h3>
-                </div>
-
-                <div class="answer rounded-3" data-value="2">
-                  <h3>Berlin</h3>
-                </div>
-
-                <div class="answer rounded-3" data-value="3">
-                  <h3>Rome</h3>
-                </div>
-
-                <div class="answer rounded-3" data-value="3">
-                  <h3>Rome</h3>
-                </div>
+            <div class="card">
+              <div class="card-header">
+                Dad Jokes
+              </div>
+              <div class="card-body">
+                <p class="card-text display-6">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Next Joke</a>
+              </div>
             </div>
           </div>
     </div>
