--- a/app/templates/dadjokes.html
+++ b/app/templates/dadjokes.html
@@ -85,8 +85,11 @@
                 Dad Jokes
               </div>
               <div class="card-body">
-                <p class="card-text display-6">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Next Joke</a>
+                <p class="card-text display-6">{{jokeSetup}}</p>
+                <br>
+                <p class="card-text display-6">{{punchline}}</p>
+                <br>
+                <a href="/dadjokes" class="btn btn-primary">Next Joke</a>
               </div>
             </div>
           </div>
