--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -31,7 +31,7 @@
                     <input type="text" name="username">
                     <p></p>
                     <p>Password:</p>
-                    <input type="text" name="password">
+                    <input type="password" name="password">
                     <p></p>
                     <input type="submit" name="sub1">
                 <p> {{result}}</p>
