--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -238,7 +238,7 @@
   <div class="mt-3 mx-2 row justify-content-end">
     <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:85%;">
       <div class="d-flex align-items-center justify-content-center display-1 fw-semibold">
-        <text id="video-title"> Now Playing </text>
+        <text id="video-title"> Now Playing 【24/7 CHILL LOFI HIP HOP RADIO】beats to sleep/relax/study to </text>
       </div>
     </div>
   </div>
