deleted a nav button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,11 +60,11 @@
                 <img src="../static/assets/reshot-icon-leaderboard-2ZS8JETV4N.svg" width="25px" height="25px" alt="">
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="/logout">
                 <img src="../static/assets/reshot-icon-ice-2UJDX685BG.svg" width="25px" height="25px" alt="">
             </a>
-          </li>
+          </li> -->
 
         </ul>
       </div>
