--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -13,17 +13,17 @@
         <title>Sign Up</title>
     </head>
 
-    <body class="bg-dark">
+    <body style="background-color: #e7c6ff;">
 
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <a class="navbar-brand btn btn-light btn-sm text-primary" style="opacity: 0.8;" href="/">coffeebuds</a>
+                <a class="navbar-brand btn btn-light btn-sm" style="opacity: 0.8; color: #383838;" href="/">coffeebuds</a>
             </div>
         </nav>
 
         <div class="row justify-content-center">
-            <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity:60%; width: 20%;">
+            <div class="p-3 d-flex flex-column align-items-center gap-3 bg-light rounded-3 border" style="opacity: 90%; width: 20%;">
                 Sign up below.
 
                 <form action="/signup" method = "POST">
