--- a/app/templates/dadjokes.html
+++ b/app/templates/dadjokes.html
@@ -27,13 +27,13 @@
       }
     </style>
   </head>
-  <body style="background-color: #27272a;">
+  <body style="background-color: #e7c6ff;">
 
     <!-- Navbar -->
 
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-          <a class="navbar-brand btn btn-light btn-sm text-primary" style="opacity: 0.8;" href="/">coffeebuds</a>
+          <a class="navbar-brand btn btn-light btn-sm" style="opacity: 0.8; color: #383838;" href="/">coffeebuds</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -55,7 +55,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="/loginRdrct">
+                <a class="nav-link btn btn-light btn-sm" style="opacity: 0.8;" href="/login">
                     <img src="../static/assets/reshot-icon-leaderboard-2ZS8JETV4N.svg" width="25px" height="25px" alt="">
                 </a>
               </li>
