--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -13,12 +13,12 @@
         <title>Profile</title>
     </head>
 
-    <body class="bg-dark">
+    <body style="background-color: #e7c6ff;">
 
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
-                <a class="navbar-brand btn btn-light btn-sm text-primary" style="opacity: 0.8;" href="/">coffeebuds</a>
+                <a class="navbar-brand btn btn-light btn-sm" style="opacity: 0.8; color: #383838;" href="/">coffeebuds</a>
             </div>
         </nav>
 
