--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -222,7 +222,7 @@
         <text style="color: #e7c6ff; margin: 3px; padding: 10px;">
           Tap anywhere to play/pause!
         </text>
-        <button type="button" id="switchStations" class="btn btn-light" style="opacity: 90%; margin: 3px;  padding: 10px; " onclick="switchStations();">
+        <button type="button" id="switchStations" class="btn btn-light" style="opacity: 90%; margin: 3px;  padding: 10px; " onclick="switchStations(true);">
           <text style="color: #383838;"> Next Station </text>
         </button>
       </div>
